--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,26 +1,28 @@
 server:
-  port: 8082 # Porta diferente do monólito (geralmente 8080) para rodar junto
+  port: 8082
 
 spring:
   application:
     name: atividades-complementares-service
 
   datasource:
+    # AQUI ESTÁ A CORREÇÃO:
+    # Se a variável de ambiente DB_HOST existir (no Docker), usa ela.
+    # Senão, usa 'localhost' (no seu PC).
     url: jdbc:postgresql://${DB_HOST:localhost}:5432/atividades_complementares_db
     username: postgres
-    password: sua_senha_aqui
+    password: password
     driver-class-name: org.postgresql.Driver
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: update # Cria as tabelas automaticamente (use 'validate' ou 'none' em produção)
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
 
-# Configuração básica de Log para ver erros
 logging:
   level:
     br.com.inproutservices: DEBUG
